--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    // For sending curl requests.
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 application {
