--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 
     // For sending curl requests.
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
+    // For parsing response JSON from the Zendesk server.
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 application {
